feat: Agregar funcionalidad de eliminación de entradas solo para usuario bruno

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,7 @@
 							<th id="th-due" class="filterable" title="Click para filtrar">Vence</th>
 							<th id="th-recorded-by" class="col-recorded-by filterable" title="Click para filtrar">Registrado por</th>
 							<th id="th-note" class="filterable" title="Click para filtrar">Nota</th>
+							<th id="th-delete" class="col-delete" style="width: 60px;">Eliminar</th>
 						</tr>
 					</thead>
 					<tbody id="entries-body">
